# cargo-stale

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: test_index.rs
src/: cli.rs  main.rs  types.rs  utils.rs
src/api/: crates_io.rs  local_index.rs  mod.rs
src/cargo/: mod.rs  parser.rs  workspace.rs
src/output/: formatter.rs
src/version/: comparison.rs  core.rs  mod.rs  parser.rs
