[package]
name = "cargo-stale"
version = "0.1.5"
edition = "2024"
description = "A fast, concurrent tool to check for outdated dependencies in your Rust Cargo.toml file"
license = "MIT"
homepage = "https://github.com/18o/cargo-stale"
repository = "https://github.com/18o/cargo-stale"
documentation = "https://docs.rs/cargo-stale"
readme = "README.md"
keywords = ["cargo", "dependencies", "outdated", "version", "check"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
authors = ["John <admin@iios.net>"]

[[bin]]
name = "cargo-stale"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
panic = "abort"
strip = true
overflow-checks = false
debug = false
debug-assertions = false
